format complete upto page no. 208

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -20562,14 +20562,12 @@ EvaM BeVdasamAyukatxH sa BakatxH tirxvidhoV BaveVtf ||
 %\newmeaning{\ni{guruBakitxsAloVkayxM, guruBakAtxyX sAloVkayxM - guruBakitxsAloVkayxM}}
 %\end{entry}
 
-%raghu, page 204
-
 \begin{entry}
 \word{guruBakitxshushUrxSAsathxla}
 \src{kA}
 \meaning{\arthanonum{shiSayxnu tananx pUvARsharxyavanunx toredu guruseVveyanunx mADabeVkeMbudanunx nirUpi\-suva sathxla:}
-\ullekha{guruBakitx shushUrxSAsathxla... pUvARsharxyavaM biTaTx sadaBxkatxnu shirxVguruviMge seVveyaM mADa\-beVkeMdu nuDida vacanaMgaLu (gaNaBA. 256-1).}}
-\vskip 2pt
+\ullekha{guruBakitx shushUrxSAsathxla... pUvARsharxyavaM biTaTx \hbox{sadaBxkatxnu} shirxVguruviMge seVveyaM mADa\-beVkeMdu nuDida vacanaMgaLu (gaNaBA. 256-1).}}
+\vskip 5pt
 \newmeaning{\ni{gurw BakitxH guruBakitxH; guruBakitxHyutA shushUrxSA guru\-BakitxshushUrxSA; guruBakitxshushUrxSA iti sathxlaM - guruBakitx\-shushUrxSAsathxlaM}}
 \end{entry}
 
@@ -20578,8 +20576,6 @@ EvaM BeVdasamAyukatxH sa BakatxH tirxvidhoV BaveVtf ||
 %\meaning{\ullekha{shivashivA, BakitxhiVnana... guruBarxSaTxshacx cAMDAloV viparxH shAvxnoV hi jAyateV.. (savasaM. 6; uripe. 1571-582); shirxVgurukarajAtarenisi... guruBarxSaTxsayx cAMDAloV rwravaM narakaM varxjeVtf||.. (savasaM. 14; mArUmu. 38-40).}}
 %\newmeaning{\ni{guruBarxSaTxH\newline 1. guruNA BarxSaTxH - guruBarxSaTxH\newline 2. guroVH sakAshAtf BarxSaTxH - guruBarxSaTxH}}
 %\end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{guruBukatxparxsAda}
@@ -20591,51 +20587,47 @@ guruBukatxparxsAdoV yaH sa shudadhxH parikiVtiRtaH ||
 \end{shl}
 \medskip
 \pauthor{(sU.A., kirx.pA., 8. 23)}
-\smallskip
+\vskip 5pt
 \newmeaning{\ni{guruNA BukatxH guruBukatxH, guruBukatxshacx asw parxsAdashacx - guruBukatxparxsAdaH}}
 \vskip -2pt
 \newmeaning{\arthanonum{\SEE{guruparxsAda}}}
 \end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{gurumaMtarx}
 \meaning{\arthanonum{guru heVLuva budidhxvAda. diVkeSx, moVkaSx, videyxyanunx koDabalalx guruvu; pUje, dhAyxna, aBiSeVka muMtAda saMdaBaRgaLalilx paThisuva deVvatAsutxti; pArxthaRne, pUjeyalilx atayxMta saraLavAgi, shakitxyutavAgi ``OM namaH {shivAya}'' eMbudu maMtarxvAgide; parxtiyoMdaralUlx hanenxraDu parxNava maMtarxgaLanonxLagoMDiruva gurumaMtarx, liMgamaMtarx matutx jaMgamamaMtarx eMba tirxvidha parxNavamaMtarxgaLalilx oMdu:}
 \ullekha{shakitx parxNava hanenxraDu gurumaMtarxvenisuvudayAyx (savasaM. 3; cenanxba. 920-284); A gurumaMtarxdalilx maganxnAgirabeVku, caraBakitx\-yalilx yukatxnAgirabeVku (savasaM. 6; aMbiga. 164-54); gurumaMtarxdiMda pUtamAda pArxNaveV parxsAdaliMgamAyitutx (savasaM. 13; mumamxDi. 1008-473); guru\-maMtarxva kaNaR\-dalilx keVLi... anayxdeYvava hogaLuva kuninx mAnava niV keVLA ! (savasaM. 14; heVmaga. 1178-539); gurumaMtarx, liMga\-maMtarx, jaMgamamaMtarx ...I parxtiyoMdaralilx 12, 12 parxNavagaLu irutatxve (shivAkoV. 116-261).}}
-\vskip 3pt
+\vskip 5pt
 \newmeaning{\ni{guroVH maMtarxH - gurumaMtarxH}}
 \end{entry}
-
-
 
 \begin{entry}
 \word{gurumaTha}
 \meaning{\arthanonum{dhAmiRka gurugaLu vAsisuva nele; guruvina vAsasAthxna:}
 \ullekha{gurumaThadoLemamxyayxgaLa pabaRkekx nALiduR kareya\-bahe nA ninanxnu (basapu. 13-12).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{guroVH maThaH - gurumaThaH}}
 \end{entry}
 
-\vskip 2pt
+\vskip -2pt
 
 \begin{entry}
 \word{gurumAhAtamxyXsathxla}
 \meaning{\arthanonum{aMgasathxlAMtagaRta parxsAdisathxlada ELu \hbox{avAMtara} sathxlagaLalilx oMdu; gururUpadalilxruva harana mAhAtamxyXvanunx nirUpisuva sathxla; elalxra sididhxgoVsakxra haranu guru rUpadalilxdAdxne eMdu nirUpisuva sathxla:}}
-\smallskip
+\medskip
 \begin{shl}
 parxsAdisathxlamAdw tu gurumAhAtamxyXkaM tataH |\\[1pt]
-gurureVvAtarx saveRVSAM kAraNaM sididhxkamaRNAmf |\\[3pt]
-gururUpoV mahAdeVvoV yataH sAkASxdupasithxtaH ||
+gurureVvAtarx saveRVSAM kAraNaM sididhxkamaRNAmf |\\[2pt]
+gururUpoV mahAdeVvoV yataH sAkASxdupasithxtaH ||\\[-2pt]
 \end{shl}
 \medskip
 \pauthor{(si.shi., 11. 4, 19)}
 \newmeaning{\ullekha{iMtu guruliMgajaMgamada parxsananxparxsAdamaM sivxVkarisida parxsAdi\-yaMgAliMgita gurumahAtamxyXveMtidiRtetxMdoDe muMde guru\-mahAtamxyXsathxlavAdudu (keYvasha. 45-1 sUtarx).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{gurumAhAtamxyXsathxlaM - mahAtamxnaH BAvaH mAhAtamxyXM, guroVH mAhAtamxyXM  gurumAhAtamxyXM, gurumAhAtamxyXM iti sathxlaM - gurumahAtamxyXsathxlaM}}
 \end{entry}
 
-\vskip 2pt
+\vskip -2pt
 
 \begin{entry}
 \word{gurumahAtemxsathxla}
@@ -20643,6 +20635,8 @@ gururUpoV mahAdeVvoV yataH sAkASxdupasithxtaH ||
 \meaning{\arthanonum{= gurumAhAtamxyXsathxla:}
 \ullekha{EkoVtatxra parxsAdisathxla -ivu Aru ive. avu yAvuveMdare - gurumahAtemx\-sathxla, liMgamahAtemxsathxla, jaMgamamahAtemxsathxla, BakatxmahAtemxsathxla, sharaNamahAtemxsathxla, parxsAdamahAtemxsathxla ({shivAkoV.} 61-99).}}
 \end{entry}
+
+\vskip -2pt
 
 %\begin{entry}
 %\word{gurumAhAtamxyXsathxla}
@@ -20659,17 +20653,17 @@ gururUpoV mahAdeVvoV yataH sAkASxdupasithxtaH ||
 %\newmeaning{\ni{gurumuKaM, guroVH muKaM - gurumuKaM}}
 %\end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{gurumUtiR}
 \src{va}
 \meaning{\arthanonum{liMgAMgada aikayxteyanunx anuBAvada mUlaka aritukoMDavaneV guru athavA gurumUtiR:}
 \ullekha{A guNa savxyavAgi niMdu, gurumUtiRyAgabeVku (savasaM. 9; shivaleM. 201-69).}}
 %liMgavicAra... gurumUtiR savARMgavanAvarisi.. (savasaM. 2; alalxma. 1506-447); rajada nijada... ogeya hAkidaDe, gurumUtiRya naSaTxva biLidu mADidanu.. (savasaM. 3; cenanxba. 1498-547); elalxra mareyabahudu... enanx gurumUtiRya kiVtiRsabAradu.. (savasaM. 4; sidadhxrA. 1986-567); ``na guroVradhikaM... parashivoV gurumUtiR shiSayxdiVkASxdikAraNAtf.. (savasaM. 6; uripe. 1412-484); beVvinamarakekx belalxda... tamamx nilava tAvariyada BinanxBAvada gurumUtiRgaLu.. (savasaM. 10; kADasi. 271-170).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{guroVH mUtiRH iva mUtiRH yasayx saH gurumUtiRH; guroVH mUtiRH - gurumUtiRH}}
 \end{entry}
+
+\vskip -2pt
 
 %\begin{entry}
 %\word{gururAyanosedu}
@@ -20682,28 +20676,26 @@ gururUpoV mahAdeVvoV yataH sAkASxdupasithxtaH ||
 %\pauthor{(guboVdhA. 49-36)}
 %\end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{guruliMga}
-\meaning{\artha{gururUpavAda liMga; SaTfsathxlakekx saMbaMdhisida AcArAdi Aru liMgagaLalilx
-oMdu; mahAliMgavu iSaTxliMga, pArxNaliMga, BAvaliMgaveMdu mUru
-vidha. I mUru matetx talA eraDeraDu vidhavAgi iSaTxliMgavu AcAraliMga, 
+\meaning{\artha{gururUpavAda liMga; SaTfsathxlakekx saMbaMdhi\-sida AcArAdi Aru liMgagaLalilx
+oMdu; mahAliMgavu \hbox{iSaTxliMga}, pArxNaliMga, BAvaliMgaveMdu mUru
+vidha. I mUru matetx talA eraDeraDu vidhavAgi iSaTxliMgavu AcAra\-liMga, 
 guruliMga eMdu eraDAgutatxde. guruliMgavu mAheVshavxra\-sathxlada sAdhakaniMda
 pUjegoLuLxtatxde:}}
-\smallskip
+\medskip
 \begin{shl}
 mahAliMgaM tirxdhA jAtaM sujanAnujiGaqkaSxyA |\\[1pt]
-parxthamaM BAvaliMgaM tu divxtiVyaM pArxNaliMgakamf ||\\[3pt]
+parxthamaM BAvaliMgaM tu divxtiVyaM pArxNaliMgakamf ||\\[1pt]
 taqtiVyamiSaTxliMgaM sAyxditeyxVvaM tirxvidhaM matamf ||\\[1pt]
-iSaTxM tu guruliMgAKayxmAcArAKayxM davxyaM BaveVtf |
+iSaTxM tu guruliMgAKayxmAcArAKayxM davxyaM BaveVtf |\\[-2pt]
 \end{shl}
 \medskip
 \pauthor{(caM.A., kirx.pA., 3. 23, 27)}
 \smallskip
 \begin{shl}
 tadupAsakarUpatAvxnAmxheVshavxramahAsathxlamf |\\[1pt]
-guruliMgasathxleV tasimxnf kirxyAshakitxparxBAvataH ||
+guruliMgasathxleV tasimxnf kirxyAshakitxparxBAvataH ||\\
 \end{shl}
 \smallskip
 \pauthor{(a.sU., 3. 42)}
@@ -20713,7 +20705,7 @@ guruliMgasathxleV tasimxnf kirxyAshakitxparxBAvataH ||
 utapxnanxvAda, samasatx upadeVshAtamxkashAsatxrXgaLalilx parxtiSAThxpita\-vAgiruva {teVjasisxna}
 nidhiyU saMpUNaR suKakekx AgaravU Ada budidhxgamayxvAda kataRqsAdAKayx tatatxvXveV
 guruliMga:}}
-\smallskip
+\medskip
 \begin{shl}
 savxjAcnxnashakitxviBavoVtithxtakataRqtatatxvXM\\[1pt]
  savoRVpadeVshavidhitaMtarxkaqtaparxtiSaThxmf |\\[2pt]
@@ -20726,9 +20718,9 @@ budedhxVH padeV vinihitaM guruliMgamAhuH ||
 %\newmeaning{\artha{sAdhakanu maheVsha sathxladalilxruvAga guruliMgavanunx sAkASxtakxrisikoLuLxtAtxne. guruliMga sAvxdhiSAThxnacakarxda madhayxdalilxde, kuMDalini shakitxyu modalu AdhAracakarxvanunx {BeVdisi,} A meVle sAvxdhiSAThxnacakarxvanunx BeVdisidAga, sAdhakanu alilxruva guruliMgavanunx sAkASxtakxrisikoLuLxtAtxneMbudu vacanakArara sidAdhxMta.}}
 %\newmeaning{\artha{kelavu veVLe guruvanenxV guruliMgaveMdu kareyuvuduMTu (jaMgamananunx jaMgamaliMga eMdu karedaMte). idakekx kAraNaveVneMdare : guruvAdavanu liMgAMga sAmarasayxvanunx paDediruvudariMda tAneV liMgaveMdu naMbutAtxne. hiVge liMgeYkayxvanunx paDeyadeyeV guruvenisikoLaLxlu baruvudilalx. liMgAMga sAmarasayx paDeyadeyeV shiSayxrige boVdhane mADidare adu obabx kuruDa inonxbabx kuruDanige mAgaRdashaRna mADidaMte.}}
 %\newmeaning{\artha{SaTasxthXlagaLige anuguNavAgiruva AcAraliMga, guruliMga, shivaliMga, jaMgamaliMga, parxsAdaliMga matutx mahAliMga eMba SaDivxdhaliMgagaLalilx oMdu; gururUpadalilxruva liMga; idu kirxyAgama, BAvAgama, jAcnxnAgama, sakAya, akAya, parakAya, dhamARcAra, BAvAcAra matutx jAcnxnAcAra -eMdu oMbatutx vidhagaLAgive. liMganiSaThxnAdavanu SaTacxkarxgaLa mUlaka tananx deVhadalilx hariyuva shakitxgaLanunx liMgamuKavanAnxgi mADidAga guruliMgavu sAvxdhiSAThxna cakarxdalilx nelegoLuLxtatxde. idu maheVshavxranige saMbaMdhapaTiTxde. manuSayxna citatx, budidhx, ahaMkAra, mana, jAcnxna matutx BAvagaLa mUlaka kirxyegaLu naDeyutatxve. ivugaLalilx budidhxyu guruliMgakekx saMbaMdhiside. guruliMgada parxdhAnalakaSxNa maMtarxgaLu. I maMtarxgaLu AcAraliMgadoDane beretAga guruliMgadalilxya AcAraliMga, guruliMgadoDane beretAga guruliMgadalilxya guruliMga, shivaliMgadoDane beretAga guruliMgadalilxya shivaliMga, jaMgamaliMgadoDane beretAga guruliMga dalilxya jaMgamaliMga, parxsAdaliMgadoDane beretAga guruliMgadalilxya parxsAdaliMga hAgU mahAliMgadoDane beretAga guruliMgadalilxya mahAliMga eMba Aru bageya savxrUpagaLanunx paDeyutatxve. I riVti saMbaMdhisidAga AyAya sathxlagaLige anukarxmavAgi satikxrXyeyiMda kirxyAdiVkeSx, maMtArxnugarxhadiMda maMtarxdiVkeSx, guruvina hasatxmasatxka saMyoVgadiMda veVdhAdiVkeSx, tirxvidhaliMgajAcnxnada mUlaka boVdhAdiVkeSx, anugarxhisuvudara mUlaka parxsananxdiVkeSx matutx tAneV moVkaSxsavxrUpaveMdu karuNisuvudariMda nivARNadiVkeSx -eMba Aru parxkArada kirxyegaLu manuSayxnige pArxpatxvAguvuvu.}
-\newmeaning{\ullekha{BoVjayxvAcAraliMgadalilx pAniVyaguruliMgadalilx... nAsikadalilx AcAraliMga jihevxyalilx guruliMga... AcAraliMgada\char'273\char'236vu gaMdha guruliMgada\char'273\char'236vu rasa (mishArxpaR. 677-11); amaLajihAvxMga\-dalilx paduLadiM guruliMgamikuRM (shivaciM. 53-3).}}
+\newmeaning{\ullekha{BoVjayxvAcAraliMgadalilx pAniVyaguruliMgadalilx... nAsikadalilx AcAraliMga jihevxyalilx guruliMga... AcAraliMgada\char'273\char'236vu gaMdha guru\-liMgada\char'273\char'236vu rasa (mishArxpaR. 677-11); amaLajihAvxMga\-dalilx paduLadiM guruliMgamikuRM (shivaciM. 53-3).}}
 % ayayx, maNiNxMge... guheVshavxraliMgadalilx parAtapxraguruliMgajaMgamasharananeMbe noVDa.. (savasaM. 2; alalxma. 801-233); guruliMga udayavAda udayava noVDirayAyx.. (savasaM. 3; cenanxba. 465-143); enanx karaNaMgaLa... guruliMgajaMgamada kAla kaTuTxve.. (savasaM. 5; kAlakA. 750-235); ayayx, shirxVguruliMgajaMgama karuNa kaTAkeSxyiMda.. (savasaM. 10; gurusi. 727-415); ayAyx, matotxMdu... duritahara pApahara shirxVguruliMgajaMgamave.. (savasaM. 12; basaliM. 1297-394).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guroVH liMgaM guruliMgaM; gurureVva liMgaM  guru\-liMgaM; gurushacx liMgaM ca  EtayoVH samAhAraH - guru\-liMgaM}}
 \end{entry}
 
@@ -20783,12 +20775,13 @@ budedhxVH padeV vinihitaM guruliMgamAhuH ||
 \begin{entry}
 \word{guruliMgatirxvidha}
 \meaning{\arthanonum{guruliMgadalilxruva diVkASxguru, shikASxguru matutx anuBAva (jAcnxna)guru eMba mUru parxkAragaLu:}}
-\smallskip
+\medskip
 \begin{shl}
-diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
+diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |\\[-2pt]
 \end{shl}
 \medskip
 \pauthor{-sU., A., kirx. pA., 8. 10; kirx. sA., BA - 3. pu. 119}
+\medskip
 \newmeaning{\ullekha{shirxV guruliMga tirxvidha diVkASxguru, shikASxguru, jAcnxnaguru (savasaM. 3; cemamxba. 839-246); diVkeSxyiMda upadeVshavanunx hoMdi\-dalilx diVkASxguruvu. upadeVshakekx anuguNavAgi boVdheyanunx aBayxsisalu shikASxguruvu. muMde adanunx manana mADikoMDalilx jAcnxnaguruvu (shivAkoV. 62-103).}}
 \end{entry}
 
@@ -20796,6 +20789,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \word{guruliMgaparxsAdi}
 \meaning{\arthanonum{moVhi, Bakatx, pUjaka, parxsAdi, viVra, pArxNi eMba guruliMga SaDaBxkatxralilx obabx; guruvina mAtige anuguNavAgi naDeyuvavanu:}
 \ullekha{guruliMgaparxsAdi\-yAdaDe guvARjecnxya miVralAgadu (savasaM. 3; cenanxba. 1173-404); guruvinAjAcnxvashaMgataneV guruliMgaparxsAdi (viveVka. 113).}}
+\vskip 5pt
 \newmeaning{\ni{guruliMgayoVH parxsAdaH asimxnf asitx iti guruliMga\-parxsAdiV; guruliMgasayx parxsAdaH asimxnf asitx iti - guru\-liMgaparxsAdiV}}
 %\smallskip
 %\newmeaning{\arthanonum{\SEE{guruliMga parxsAdi}}}
@@ -20805,7 +20799,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \word{guruliMgapArxNi}
 \meaning{\arthanonum{moVhi, Bakatx, pUjaka, pArxNi, viVra, parxsAdi eMba guruliMga SaDaBxkatxralilx obabx; guruseVveyalelxV tatapxranAdavanu:}
 \ullekha{guruliMgapArxNiyAdaDe mAnavara seVve mADalAgadu (savasaM. 3; cenanxba. 1173-404); anayx\-seVveyanulalxMGisi guruseVvArataneV guruliMgapArxNiyenisi\-koLavxM (viveVka. 113).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruliMgeV (gurushacx liMgaM ca) Eva pArxNaH asitx asAyx iti guruliMgapArxNiV / guruliMgaM Eva pArxNaH asayx asitx iti - guruliMgapArxNiV}}
 %\newmeaning{\arthanonum{\SEE{guruliMgapArxNi}}}
 \end{entry}
@@ -20814,7 +20808,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \word{guruliMgapUjaka}
 \meaning{\arthanonum{guruliMgakekx saMbaMdhisida moVhi, Bakatx, pUjaka, pArxNi, viVra, parxsAdi eMba SaDaBxkatxralilx obabx; anayxdeYvavanunx pUjisade, guruliMgavanunx mAtarx seVvisuvavanu:}
 \ullekha{guruliMga\-pUjakanAdaDe anayxpUjeya mADalAgadu (savasaM. 3; cenanxba. 1173-404); beV\char'273\char'311\char'306Mdu pUjeyanolalxde guruBajanA\-nivxtaneV guruliMgapUjakanu (viveVka. 113).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruliMgasayx pUjakaH  guruliMgapUjakaH; guru\-liMgayoVH pUjakaH - guruliMgapUjakaH}}
 \end{entry}
 
@@ -20822,7 +20816,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \word{guruliMgaBakatx}
 \meaning{\arthanonum{guruliMgakekx saMbaMdhisida moVhi, Bakatx, pUjaka, pArxNi, viVra, parxsAdi eMba SaDaBxkatxralilx obabx; tananx pUvAR\-sharxyava biTuTx guruseVveyanunx mADuvavanu:}
 \ullekha{guruliMga\-BakatxnAdaDe pUvaRbaMdhuperxVmava mADalAgadu (savasaM. 3; cenanxba. 1173-404); jaMgamave guruliMgaBakatxrige haraNa\-kiraNa ceYtanayx\-mUtiR noVDayayx (savasaM. 10; gurusi. 681-374); baMdhugaLigupacAravanuLidu guruvinoLanu\-rAgiyeV guruliMgaBakatxnu (viveVka. 113).}}
-\vskip 3pt
+\vskip 4pt
 \newmeaning{\ni{guruliMgasayx BakatxH guruliMgaBakatxH; guruliMgayoVH BakatxH - guruliMgaBakatxH}}
 \vskip -1pt
 \newmeaning{\arthanonum{\SEE{guruBakatx}}}
@@ -20842,7 +20836,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \src{kA}
 \meaning{\arthanonum{guruliMgakekx saMbaMdhisida SaDaBxkatxralilx obabx; tAyitaMdeyara meVlina vAyxmoVhavanunx tayxjisi guruliMgadalilx anurAga\-vuLaLxvanu:}
 \ullekha{mAtaqpitaqmoVhaMgaLaM biTuTx guruliMgadalilx pirxVtaneV guruliMgamoVhi (viveVka. 113).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{guruliMgayoVH moVhaH asitx asimxnf iti; guruliMgasayx moVhaH asitx asimxnf iti - guruliMgamoVhiV}}
 %\newmeaning{\arthanonum{\SEE{gurumoVhiV}}}
 \end{entry}
@@ -20851,7 +20845,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \word{guruliMgamoVhita}
 \src{va}
 \meaning{\arthanonum{= guruliMgamoVhi:} \ullekha{guruliMga\-moVhitanAdaDe mAtApitara moVhava mareyabeVku (savasaM. 3; cenanxba. 1173-404).}}
-\vskip 3pt
+\vskip 4pt
 \newmeaning{\ni{guruliMgeVna moVhitaH guruliMgamoVhitaH; guru\-liMgABAyxM moVhitaH - guruliMgamoVhitaH}}
 \end{entry}
 
@@ -20859,7 +20853,7 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \word{guruliMgaviVra}
 \meaning{\arthanonum{guruliMga SaDaBxkatxralilx obabx; guruvina upadeVshadaMte naDeyuvavanu:}
 \ullekha{guruliMgaviVranAdaDe guruliMgA\-cAradalilx naDeyabeVku (savasaM. 3; cenanxba. 1173-404); anayxmAgaRvaM tayxjisi gurUkatxmAgaRvatiRyeV guruliMga\-viVranu (viveVka. 113).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{guruliMgasayx viSayeV viVraH - guruliMgaviVraH / guru\-liMgayoVH viSayeV viVraH - guruliMgaviVraH}}
 \newmeaning{\arthanonum{\SEE{guruviVra}}}
 \end{entry}
@@ -20867,9 +20861,9 @@ diVkASx shikASxnuBAvashacx guruliMgaM tirxdhA BaveVtf |
 \begin{entry}
 \word{guruliMgaSaDaBxkatx}
 \src{kA}
-\meaning{\arthanonum{guruliMgakekx saMbaMdhisida moVhi, Bakatx, pUjaka, pArxNi, viVra, parxsAdi eMba Aru vidha Bakatxru. tAyitaMdeyara vAyxmoVhavanunx toredu guruliMgadalilx sadA pirxVtiyiMdiruva guruliMgamoVhi, tananx baMdhugaLa upacAradalilx niratanAgade guru\-seVveyanunx mADuva guruliMgaBakatx, guruliMgavanunx yAvAgalU pUjisuva guruliMgapUjaka, guruvina upadeVshadaMte naDeyuva guruliMgaviVra, guruvina Ajecnxyanunx pAlisuva guruliMgaparxsAdi matutx manuSayxranunx seVvisade guruseVveyalilx niratanAda guruliMgapArxNi - eMba Aru parxkArada guruliMgaBakatxru:}
+\meaning{\arthanonum{guruliMgakekx saMbaMdhisida moVhi, Bakatx, pUjaka, pArxNi, viVra, parxsAdi eMba Aru vidha Bakatxru. tAyitaMdeyara vAyxmoVhavanunx toredu~guru\-liMga\-dalilx sadA pirxVtiyiMdiruva guruliMgamoVhi, tananx baMdhugaLa upacAradalilx niratanAgade guru\-seVve\-yanunx mADuva guruliMgaBakatx, guruliMgavanunx yAvAgalU pUjisuva guruliMgapUjaka, guruvina upadeVshadaMte naDeyuva guruliMgaviVra, guruvina Ajecnxyanunx pAlisuva guruliMgaparxsAdi matutx manuSayxranunx seVvisade guruseVveyalilx niratanAda guruliMgapArxNi - eMba Aru parxkArada guruliMgaBakatxru:}
 \ullekha{guruliMgaSaDaBxkatxru... guruliMgamoVhi guru\-liMgaBakatxnu guruliMgapUjakanu guruliMgaviVranu guruliMga\-parxsAdi guruliMgapArxNi (viveVka. 113).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{SaTf ca teV BakAtxshacx SaDaBxkAtxH; guruliMgasayx guruliMgayoVH vA SaDaBxkatxH - guruliMgaSaDaBxkatxH}}
 \end{entry}
 
@@ -20889,30 +20883,28 @@ guruliMgasathxleV tasimxnf... ||
 \newmeaning{\artha{guruliMgakekx saMbaMdhisida kirxyAgamasathxla, BAvAgamasathxla, jAcnxnAgamasathxla, sakAya\-sathxla, akAyasathxla, parakAyasathxla, dhamARcAra, BAvAcAra, jAcnxnAcAra eMdu oMbatutx avAMtarasathxlagaLu:}}
 \medskip
 \begin{shl}
-mAheVshavxrasathxleV saMti sathxlAni nava tApasa |\\[2pt]
-kirxyAgamasathxlaM pUvaRM tatoV BAvAgamasathxlamf ||\\[3pt]
-jAcnxnAgamasathxlaM cAtha sakAyasathxlamiVritamf |\\[2pt]
-tatoV{\char'263}kAyasathxlaM porxVkatxM parakAyasathxlaM tataH ||\\[3pt]
-dhamARcArasathxlaM cAtha BAvAcArasathxlaM tataH |\\[2pt]
+mAheVshavxrasathxleV saMti sathxlAni nava tApasa |\\[1pt]
+kirxyAgamasathxlaM pUvaRM tatoV BAvAgamasathxlamf ||\\[2pt]
+jAcnxnAgamasathxlaM cAtha sakAyasathxlamiVritamf |\\[1pt]
+tatoV{\char'263}kAyasathxlaM porxVkatxM parakAyasathxlaM tataH ||\\[2pt]
+dhamARcArasathxlaM cAtha BAvAcArasathxlaM tataH |\\[1pt]
 jAcnxnAcArasathxlaM ceVti karxmAdeVSAM BidoVcayxteV ||
 \end{shl}
 \medskip
 \pauthor{(si. shi., 16. 2-4)}
 \smallskip
 \newmeaning{\ullekha{guruliMgasathxla tirxvidha: diVkeSx, shikeSx, sAvxnuBAva (savasaM. 3; cenanxba. 720-215).}}
-\smallskip
+\vskip 5pt
 \newmeaning{\ni{guruliMgaM iti sathxlaM - guruliMgasathxlaM}}
 %iMtAcAraliMgasathxlamoMbatutxM... guruliMgasathxlamoMbatutxM.. (savasaM. 11; imamxDi. 1247-580); keVLi, keVLirayAyx... I oMbatutx guruliMgasathxlaMgaLu.. (savasaM. 14; SaNumxKa. 780-355).
 \end{entry}
-
-
 
 \begin{entry}
 \word{guruliMgasathxlatirxvidha}
 \src{va}
 \meaning{\arthanonum{guruliMgasathxladalilxruva mUru sathxlagaLu. avugaLeMdare diVkeSx, shikeSx matutx sAvxnuBAva:}
 \ullekha{guru\-liMgasathxlatirxvidha diVkeSx shikeSx sAvxnuBAva idakekx vivara diVkeSx\-yeMdaDe gurushikeSxyeMdaDe jaMgamasAvxnuBAvaveMdaDe taninxMda tAna\char'273\char'236vudu (savasaM. 3; cenanxba. 720-215).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruliMgasathxlaM ca tatf tirxvidhaM ca - guruliMgasathxla\-tirxvidhaM}}
 \end{entry}
 
@@ -20921,7 +20913,7 @@ jAcnxnAcArasathxlaM ceVti karxmAdeVSAM BidoVcayxteV ||
 \src{saM}
 \meaning{\arthanonum{Bakatxsathxlada hadineYdu aMga\-sathxlada
 avAMtarasathxlagaLalilx oMdu. ``yasayx deVveV parA BakitxyaRthA deVveV tathA gurw''
-(shevxV.u., 6. 23) eMba shevxVtAshavxtaroVpaniSatitxna vAkayxdaMte guru-liMgagaLeraDanunx
+(shevxV.u., 6.~23) eMba shevxVtAshavxtaroVpaniSatitxna vAkayxdaMte guru-liMgagaLera\-Danunx
 BakitxpUvaRkavAgi gurupUje mADuvudariMda liMgapUjeyanUnx mADidaMtAgutatxde. iMtaha
 upadeVshavanunx mADuva sathxla. idu uBayasathxlaveMdU parxsidadhxvAgide:}}
 \smallskip
@@ -20940,15 +20932,16 @@ saMbaMdhoV yatheVtAyxkAMkASxyAM anaMtaraM uBayasathxlamituyxcayxteV |
 \end{shl}
 \smallskip
 \pauthor{(keY.sA., vi.saM. 111, pu. 23)}
+\vskip 5pt
 \newmeaning{\ni{guruliMgasayx guruliMgayoVH vA acaRnaM guruliMgA\-caRnaM, guruliMgAcaRnaM iti sathxlaM - guruliMgA\-caRnasathxlaM}}
 \end{entry}
 
 \begin{entry}
 \word{guruliMgAnuBAvi}
 \src{va}
-\meaning{\arthanonum{maheVshasathxlada Bakatxnu hAgU parashiva beVre eMdu  tiLidu guruliMgavanunx pUjisuvudariMda avanu liMgAnuBAviyAgiralu  sAdhayxvilalx. anuBAva\-dalilx suKavirutatxde eMba athaRsUcAyxthaRdalilx \hbox{anuBAvi} eMba padavanunx baLasalAgide. apf tatatxvXvanunx avanu guruliMgakekx apiRsi, adariMda  rasaveMba parxsAdavanunx koMDu suKisuvuda\-riMda avanu guruliMgAnuBAvi enisikoLuLxtAtxne:}
+\meaning{\arthanonum{maheVshasathxlada Bakatxnu hAgU \hbox{parashiva} beVre eMdu  tiLidu guruliMgavanunx pUjisuvudariMda avanu liMgAnuBAviyAgiralu  sAdhayxvilalx. anuBAva\-dalilx suKavirutatxde eMba athaRsUcAyxthaRdalilx \hbox{anuBAvi} eMba padavanunx baLasalAgide. apf tatatxvXvanunx avanu guruliMgakekx apiRsi, adariMda  rasaveMba parxsAdavanunx koMDu suKisuvuda\-riMda avanu guruliMgAnuBAvi enisikoLuLxtAtxne:}
 \ullekha{salilaviDidu guruliMgAnuBAviyAgi rasaparxsAdava kaMDu suKiyAdenayAyx (savasaM. 12; \hbox{deVshikeVM. 406-123}).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruliMgasayx anuBAvaH asimxnf asitx iti; guru\-liMgayoVH anuBAvaH asimxnf asitx iti - guruliMgAnu\-BAviV}}
 \end{entry}
 
@@ -20969,12 +20962,10 @@ saMbaMdhoV yatheVtAyxkAMkASxyAM anaMtaraM uBayasathxlamituyxcayxteV |
 \src{va}
 \meaning{\arthanonum{guruvina boVdhe:}
 \ullekha{guruvacanava tanonxLagiM\-biTuTxkoMDa parxsAdiya parxsAdiyeMbe (savasaM. 1; basava. 1175-322); hasivuLaLxnanxkakx vAyxpAra biDadu, siVta uLaLxnanxkakx upAdhike biDadu, mAtuLaLxnanxkakx bUTATike biDadu, niderxyuLaLx\-nanxkakx satiya saMga biDadu. idu kAraNa kuSxtitxMge BikeSx, siVtakekx ragaTe, mAtiMge maMtarx, shayanakekx shivadhAyxnaveMdu heVLikoTaTx guru\-vacanava miVri naDevavarige paradalilx pariNAma dorekoLaLxdu noVDA (savasaM. 2; alalxma. 1615-479); guruvacanava\-nudAsiVnava mADi, guruliMgakekx vaMcisuvavana muKava noVDe noVDenavana kUDe mAtADe mAtADe pApiya idiralilx nilelx nilelx kUDalacenanxsaMgayayxna vacana na vadaMti na pashayxMti eMdudAgi (savasaM. 3; cenanxba. 81-24).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guroVH vacanaM - guruvacanaM}}
 %davxyaliMgaveMbaruda... guruvacana racaneyanaridu niHparxpaMciyAnAdenayayx saMgayayx.. (savasaM. 5; niVlamamx. 967-294); ariyabArada Ganavanaridu {sAdhisi} gedadx... nAnu sharaNeMba guruvacanavidiredudx koluvaDe.. (savasaM. 4; sidadhxrA. 120-36).
 \end{entry}
-
-
 
 %\begin{entry}
 %\word{guruvicAra}
@@ -20994,7 +20985,7 @@ yashacx tayxketxVtarAcAroV guruviVraH sa ucayxteV ||
 \medskip
 \pauthor{(sU.A., kirx.pA., 8.48)}
 \newmeaning{\ullekha{kAyaviDidu mAye biDabeVkeMba heDaDxrige... \hbox{guruviVraneV} paraMjoyxVti mahAvirakitx (savasaM. 12; paraMjoyxVti. 1263-375).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruSu viVraH - guruviVraH}}
 \end{entry}
 
@@ -21009,7 +21000,7 @@ yashacx tayxketxVtarAcAroV guruviVraH sa ucayxteV ||
 \src{kA}
 \meaning{\arthanonum{liMgasathxlagaLalilx oMdu; guruvu tananx shiSayxrige diVkeSxyanunx niVDi, avaranunx tananxMteyeV parivatiRsuvudanunx nirUpisuva sathxla:}
 \ullekha{gurushiSayxparxveVshasathxla... nimaRlAtamxkarAda shiSoyxVtatxmarugaLanunx shirxVguruvu diVkASxvidhAna\-diMda tananxMte mADikoMDa pariyaM {toV\char'273\char'236} nuDida vacanaMgaLu (gaNaBA. 200-1).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{gurushiSayxyoVH parxveVshaH gurushiSayxparxveVshaH athavA gurw shiSayxsayx parxveVshaH  gurushiSayxparxveVshaH athavA guroVH shiSeyxV parxveVshaH gurushiSayxparxveVshaH, gurushiSayxparxveVshaH iti sathxlaM - gurushiSayxparxveVshasathxlaM}}
 \end{entry}
 
@@ -21018,7 +21009,7 @@ yashacx tayxketxVtarAcAroV guruviVraH sa ucayxteV ||
 \src{va}
 \meaning{\arthanonum{deVhada bayakegaLanunx kaLedavanu (deVhavanunx maNiNxna deVha athavA pAthiRvashariVra eMdu kareyuvudu BAratiVya dashaRnagaLalelxlAlx parxsidadhx):}
 \ullekha{maNiNxna guNava\-naridu kaLedaDe, guru shudAdhxtimxyeMbe (savasaM. 8; moVLimA. 2029-651).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruNA shudadhxH AtAmx yasayx saha - gurushudAdhxtAmx}}
 \end{entry}
 %hiVge `maNiNxna guNavanaridu kaLedaDe guru shudAdhxtimx' enunxtAtxne moVLige mArayayx.
@@ -21027,7 +21018,7 @@ yashacx tayxketxVtarAcAroV guruviVraH sa ucayxteV ||
 \word{gurusaMjecnx}
 \src{va}
 \meaning{\arthanonum{guruvina kuruhu:} \ullekha{gurusaMjecnxya a\char'273\char'236ye\-nAdaDe enanx barxhamxsaMjecnx batitxhoVgali deVvA (savasaM. 4; {sidadhxrA}. 376-105).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guruH iti saMjAcnx - gurusaMjAcnx}}
 \end{entry}
 
@@ -21057,11 +21048,9 @@ yashacx tayxketxVtarAcAroV guruviVraH sa ucayxteV ||
 \meaning{\arthanonum{guruvina sAhacayaR; saMbaMdha; AcAra:}
 \ullekha{arivu sAhitayxguru, gurusAhitayx AcAra (savasaM. 3; cenanxba. 773-230); gurusAhitayx cenanxbasavaMgAyitutx (savasaM. 4; sidadhxrA. 1941-555).}}
 %totutx shaqMgAravAdaDeVnoV... gurusAhitayxsaMbaMdhava mADidaDe.. (savasaM. 8; maDimA. 623-232).
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{guroVH sAhitayxM - gurusAhitayxM}}
 \end{entry}
-
-\vskip 2pt
 
 %\begin{entry}
 %\word{gurusAvxyata}
@@ -21089,25 +21078,25 @@ hAgU oMdu sAvira paMcAkaSxriVmaMtarxvanunx japisutAtx mADuva pUje:}}
 \medskip
 \begin{shl}
 pUjA hi tirxvidhA porxVkAtx guviRV ca mahatiV laGuH ||\\[1pt]
-mahatiVmutatxmaH kuyARdugxviRVM madhayxma Eva ca |\\[3pt]
+mahatiVmutatxmaH kuyARdugxviRVM madhayxma Eva ca |\\[2pt]
 guvAyxRM mahatAyxmapi ca BadarxM tatatxvXM hi maMDalamf |\\[1pt]
-SaTftirxMshadaSATxdasha vA guvaRcARyAM samiVritAH ||\\[3pt]
+SaTftirxMshadaSATxdasha vA guvaRcARyAM samiVritAH ||\\[2pt]
 aSoTxVtatxrashataM vApi tirxshataM vA sahasarxkamf |\\[1pt]
-guvAyxRM mahatAyxmapi ca vatiRkA jAvxlayeVdapi ||\\[3pt]
+guvAyxRM mahatAyxmapi ca vatiRkA jAvxlayeVdapi ||\\[2pt]
 laGAvxyXmavasarAyAM vA diVpa EkaH samiVritaH |\\[1pt]
-catAvxroV vA tathA dwvx vA mahatAyxM ca gurAvapi ||\\[3pt]
+catAvxroV vA tathA dwvx vA mahatAyxM ca gurAvapi ||
+\end{shl}
+\begin{shl}
 guvAyxRM mahatAyxmapi ca mUlaM dashashataM japeVtf |\\[1pt]
 EkAdasha mahatAyxM ca guvAyxRM niVrAjanAni hi ||
 \end{shl}
 \medskip
 \pauthor{(makuTa., kirx.pA., 3. 2 - 13)}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{guviRV cAsw pUjA ca - guviRVpUjA}}
 \vskip 3pt
 \newmeaning{\arthanonum{\SEE{padamxmaMDala, mahApUjAkarxma}}}
 \end{entry}
-
-\vskip 2pt
 
 %\begin{entry}
 %\word{guhayx}
@@ -21126,11 +21115,13 @@ EkAdasha mahatAyxM ca guvAyxRM niVrAjanAni hi ||
 %\newmeaning{\ni{guhayxM (napuM), guhayxH(puM), gUhanaM, guhayxteV iti vA - guhayxM (guhayxH)}}
 %\end{entry}
 
+\vskip -3pt
+
 \begin{entry}
 \word{guhayxparxNava}
 \src{va}
-\meaning{\arthanonum{mahAliMga.} \ullekha{haMsAMkitaderaDesaLa niVreVjada \hbox{kaniRkeya} sUkaSxmXraMdharxgata parxNavada joyxVtirAkaqtiyAda guhayxparxNavave [ma]hAliMgamadu ninanx goVpayxsavxrUpamAdudayayx (savasaM. 11; shUnayxmaM. 1275-589).}}
-\vskip 2pt
+\meaning{\arthanonum{mahAliMga.} \ullekha{haMsAMkitaderaDesaLa niVreVjada \hbox{kaniRkeya} sUkaSxmXraMdharxgata parxNavada joyxVtirAkaqtiyAda guhayxparxNavave [ma]hAliMgamadu ninanx goVpayxsavxrUpa\-mAdudayayx (savasaM. 11; shUnayxmaM. 1275-589).}}
+\vskip 4pt
 \newmeaning{\ni{guhayxshacx asw parxNavashacx - guhayxparxNavaH}}
 \end{entry}
 
@@ -21148,21 +21139,25 @@ EkAdasha mahatAyxM ca guvAyxRM niVrAjanAni hi ||
 %\newmeaning{\ullekha{kere haLaLx bAvigaLu meYdegedaDe... guLeLx goraje cipupx kANabahudu.. (savasaM. 1; basava. 862-225); kAdanaMte, kaNaneVraleVko?... hALUroLage nari guLeLxya tiMdu baguLidaMte kANA.. (savasaM. 3; cenanxba. 1101-375); molemuDiyidadxDeVnu mUgilalxdavaLiMge?... jaladoLage huTiTx guLeLx jAtisamxratavxvariditutx.. (savasaM. 5; akakxma. 346-103); navilADiteMdu keMboVta pakakxva tarakoMDaMte... naLiLxguLeLxya tiMda nari haLaLxda taDiyalilx.. (savasaM. 11; toVMTasi. 219-107); iMdu nALeyeMba maMdabudidhxge saMdugoDa diraNANx... niVruguLeLxyaMte toVri aDaguva anitayxshariVrada BoVgavu.. (savasaM. 14; SaNumxKa. 363-210).}}
 %\end{entry}
 
+\vskip -3pt
+
 \begin{entry}
 \word{gUDha}
 \meaning{\arthanonum{paramAtamxnanunx gurutisalu sahakAriyAda para, gUDha, shariVrasathx, liMgakeSxVtarx matutx anAdi eMba aidu bageya cihenxgaLalilx oMdu; parxtayxkaSxvAgi kANisikoLaLxdidadxrU samasatx vasutxgaLalUlx paramAtamxnu aMtagaRtanAgiruva sithxti:}
 \ullekha{anaMta\-koVTi barxhAmxMDaMgaLa tanonxLaDagisikoMDu samasatx jagajajxnanakekx tAneV kAraNavAgi avayxkatxlakiSxtavAda nimitatxgUDhaveMba saMjecnx\-yaduLuLxdAgihudu (savasaM. 6; uripe. 1590-595); paraM gUDhameMdatishaya shariVrasathxveMdu liMgakeSxVtarxveMdanAdiyu\-menipapx nutavAdanAdiyiVshavxrana teVjasasxmagarxteya liMgavadeYdu ku\char'273\char'304hiMdalipupxdeY (viVsheYpu. 1-3-19); tAM mUtiRyalalxde sakala mUtiRyaM taninxMdaleV puTiTxsi parikisalf goVpayxdiMdire gUDhamenisitu (cebapu. 60-37).}}
 % ayAyx, shirxVmahAviBUtiyiMda kaMDe... A nimamx divayxmUtiRya gUDhava, I enanx karasathxladoLage.. (savasaM. 1; basava. 1006-270); pAda bAhu modalAgi elalx parxsAdiyAgirabeVku... KeVcaraBeVdadiMda guDha parxsAdiyAgirabeVku.. (savasaM. 3; cenanxba. 452-139); etitxda parxsAda nitayxda muKava kaMDu... nigUDha rUDhavaLidu.. (savasaM. 5; niVlamx. 869-274); kUTada suKadalilx noVTa kaMbeLagAge... avanipapx gUDhavanu niVnidARDisutetxlavo.. (savasaM. 4; sidadhxrA. 471-132); anAdishAshavxtaM nitayxM {ceYtanayxM} citfsavxrUpakaM... parxthamaM gUDhaninARma divxtiVyaM citasxvXrUpakaM.. (savasaM. 6; uriliM. 1280-406).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{gUDhaH, guhf+katx}}
 \end{entry}
+
+\vskip -3pt
 
 \begin{entry}
 \word{gUDhasaMjecnx}
 \src{kA}
 \meaning{\arthanonum{= gUDha:}
 \ullekha{vaTataruvinoLu biVja\-rUpadi sUkaSxmXvenisi BeVdipa budidhxgoLagAgade niravayavadAgi niSakxLa\-vAgi vishavxkekx paramakAraNavAgi gUDhasaMjAcnx nAma (shivaciM. 1-29).}}
-\vskip 2pt
+\vskip 4pt
 \newmeaning{\ni{gUDhA ca asw saMjAcnx ca - gUDhasaMjAcnx}}
 \end{entry}
 
@@ -21185,22 +21180,23 @@ EkAdasha mahatAyxM ca guvAyxRM niVrAjanAni hi ||
 %\meaning{\arthanonum{rahasayxvanunx tiLiyuvudu.}}
 %\end{entry}
 
+\vskip -3pt
 
 \begin{entry}
 \word{gaqhashudidhx}
 \meaning{\arthanonum{paMcAcAragaLalilx oMdAda shivAcArakekx saMbaMdhisida hadinAru shudidhxgaLalilx oMdu bage; shivaBakatxru nimiRsida athavA shivaliMgamuderxyiMda aMkitavAgiruva maneyanunx Bakatxru vAsakekx sivxVkarisuva kirxye:}}
-\smallskip
+\medskip
 \begin{shl}
-BaketxYsutx nimiRtaM vApi shivaliMgAMkitaM tu vA |\\[1pt]
+BaketxYsutx nimiRtaM vApi shivaliMgAMkitaM tu vA |\\[2pt]
 veVshamxBaketxYH parigArxhayxM gaqhashudidhxH samiVritA ||
 \end{shl}
 \medskip
 \pauthor{(caM.A., kirx.pA., 9. 35)}
 \smallskip
 \newmeaning{\ullekha{geVhamaM viVrasheYvare mALupxdA BavigaLaMTadidoRDeyadeV gaqhashudidhxyeY (viVsheYpu. 7-112-8).}}
-\smallskip
+\vskip 4pt
 \newmeaning{\ni{gaqhasayx shudidhxH - gaqhashudidhxH}}
-\vskip 2pt
+\vskip 1pt
 \newmeaning{\arthanonum{\SEE{SoVDashashudidhx}}}
 \end{entry}
 
@@ -21223,13 +21219,14 @@ veVshamxBaketxYH parigArxhayxM gaqhashudidhxH samiVritA ||
 % gurugoVtarx.}} 
 %\newmeaning{\arthanonum{vaMsha; kula: viVra, naMdi, vaqSaBa, BaqMgiV, sakxMda-ivu 5 goVtarxgaLu. vacanakAraru goVtarxvanunx opupxtitxralilalx.}
 \ullekha{goVtarxnAmava besagoMDaDe mAtu nUkade sumamxnididxrideVnayAyx taleya kutitx nelana bare\-vutitxdidxrideVnayAyx? goVtarxnAma, mAdAra cenanxyayx, DoVhara kakakxyayxneMbudeVnu, kUDalasaMgayAyx (savasaM. 1; basava. 745-186); jAti vaNARsharxma kula goVtarx nAma siVme\-yeMba SaDuBarxme kaNaNxlilx kavidu OlADuvananxbara Bakatxne? (savasaM. 2; alalxma. 1412-419); jaMgamaliMgamoVhitanAdaDe tananx kulagoVtarxmoVhava mareyabeVku (savasaM. 3; cenanxba. 1220-423); paTaTxNakekx oDeyanAda baLika, jAtigoVtarxva\-narasaluMTe? (savasaM. 5; amuge. 608-191); A sakala pArxNigaLu shivanAdaDe jAti vaNARsharxma kulagoVtarx nAma siVme baMda baTeTxge baDidADaleVtako? (savasaM. 14; SaNumxKa. 513-252); viVra, naMdi, vaqSaBa, BaqMgi, sakxMda ivu aidu goVtarxgaLu. ivugaLige reVvaNasidadhx, maruLArAdhayx, EkoVrAma, paMDitArAdhayx, vishAvxrAdhayx ivaru anukarxmavAgi mUlagurugaLu (shivAkoV. 154-397).}}
+\vskip 5pt
 \newmeaning{\ni{gAM  BUmiM tArxyateV iti - goVtarxM}}
 \end{entry}
 
 \begin{entry}
 \word{goVtarxsaMsakxqqti}
 \src{saM}
-\meaning{\arthanonum{oMdu vaMsha athavA kulakekx saMbaMdhisida AcaraNegaLu; goVtarx eMdare shivagoVtarx. avu \hbox{para\-sapxra} saMbaMdhakekx kAraNavAdavugaLu. aMtaha saMbaMdhagaLu BayaBakitxyiMda kUDidadxre goVtarxsaMsakxqqti enisutatxve:}}
+\meaning{\arthanonum{oMdu vaMsha athavA kulakekx saMbaMdhi\-sida AcaraNegaLu; goVtarx eMdare shivagoVtarx. avu \hbox{para\-sapxra} saMbaMdhakekx kAraNavAdavugaLu. aMtaha saMbaMdhagaLu BayaBakitxyiMda kUDidadxre goVtarxsaMsakxqqti enisutatxve:}}
 \smallskip
 \begin{shl}
 goVtArxNi shivagoVtArxNi tatarx saMbaMdhakAraNamf |\\[1pt]
@@ -21237,6 +21234,7 @@ BayaBakitxparA tatarx kathayxteV goVtarxsaMsakxqqtiH ||
 \end{shl}
 \medskip
 \pauthor{(sheY.ra., BA-2, 17. 194)}
+\vskip 5pt
 \newmeaning{\ni{goVtarxsayx saMsakxqqtiH - goVtarxsaMsakxqqtiH}}
 \end{entry}
 
@@ -21253,10 +21251,13 @@ vishavxkaNaRshacx paMceYteV paMcagoVtarxsamudaBxvAH ||
 \end{shl}
 \medskip
 \pauthor{(suparxBeV. viVra. parxkA. : u.- viV. sa.saM. 1.29)}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{goVterxV samudaBxvaH - goVtarxsamudaBxvaH}}
+\vskip -3pt
 \newmeaning{\arthanonum{\SEE{goVtarx}}}
 \end{entry}
+
+%raghu, page 209
 
 \begin{entry}
 \word{goVtArxdhikAri}
