209 to 272 pages are formated

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -38,5 +38,5 @@
 \end{multicols}
 \newpage
 \input tex-for-print/anubandha-2.tex
-%\input tex-for-print/anubandha-3.tex
+\input tex-for-print/anubandha-3.tex
 \end{document}
